refactor : UI, Data code refactoring complete
1. function naming
2. removing logic that perform same process
3. separating fuction into units of same feature

--- a/android/Sara/app/src/main/res/layout/fragment_image_result.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_result.xml
@@ -78,8 +78,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
-                        android:scaleType="center"
-                        tools:srcCompat="@drawable/ic_launcher_background" />
+                        android:scaleType="center" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
