--- a/android/Sara/app/src/main/res/layout/fragment_gallery_details.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_gallery_details.xml
@@ -10,6 +10,12 @@
         <variable
             name="myEmail"
             type="java.lang.String" />
+        <variable
+            name="fragment"
+            type="com.xten.sara.ui.gallery.GalleryDetailsFragment" />
+        <variable
+            name="viewModel"
+            type="com.xten.sara.ui.gallery.GalleryViewModel" />
         <import type="android.view.View"/>
     </data>
 
@@ -41,6 +47,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="@dimen/default_margin"
+                        android:onClick="@{()->fragment.setOnBackPressedListener()}"
                         android:src="@drawable/ic_arrow" />
 
                     <TextView
@@ -61,9 +68,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginHorizontal="@dimen/default_margin"
                     android:layout_marginTop="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
                     android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
@@ -111,9 +117,8 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginHorizontal="@dimen/default_margin"
                     android:layout_marginTop="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
                     android:backgroundTint="@color/sara_lightGray"
                     app:cardCornerRadius="@dimen/corner_radius_4"
                     app:cardElevation="0dp"
@@ -126,16 +131,14 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:background="?attr/selectableItemBackground"
-                        android:scaleType="center"
-                        tools:srcCompat="@drawable/ic_launcher_background" />
+                        android:scaleType="center" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginHorizontal="@dimen/default_margin"
                     android:layout_marginTop="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
                     app:cardBackgroundColor="@color/sara_lightGray"
                     app:cardCornerRadius="@dimen/corner_radius_4"
                     app:cardElevation="0dp"
@@ -146,6 +149,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
+                        android:onClick="@{()->fragment.copyToClipboard(fragment.clipboardManager, content.text.toString())}"
                         android:orientation="vertical">
 
                         <TextView
@@ -186,9 +190,8 @@
                             android:id="@+id/content"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/default_margin"
+                            android:layout_marginHorizontal="@dimen/default_margin"
                             android:layout_marginTop="@dimen/default_margin"
-                            android:layout_marginEnd="@dimen/default_margin"
                             android:layout_marginBottom="@dimen/content_margin"
                             android:text="@{gallery.text}"
                             android:textColor="@color/sara_gray"
@@ -202,10 +205,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/default_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:layout_marginBottom="@dimen/default_margin"
+                    android:layout_margin="@dimen/default_margin"
                     android:orientation="horizontal">
 
                     <Button
@@ -217,6 +217,7 @@
                         android:layout_marginBottom="@dimen/default_margin"
                         android:layout_weight="1"
                         android:text="@string/text_button_share"
+                        android:onClick="@{()->fragment.startShareChooserIntent(content.text.toString())}"
                         app:icon="@drawable/ic_share"
                         app:iconGravity="textStart" />
 
@@ -229,7 +230,8 @@
                         android:layout_marginBottom="@dimen/default_margin"
                         android:layout_weight="1"
                         android:text="@string/text_button_remove"
-                        android:visibility="visible"
+                        android:visibility="@{gallery.email.equals(myEmail)? View.VISIBLE : View.GONE}"
+                        android:onClick="@{()->viewModel.deleteContent(gallery._id)}"
                         app:icon="@drawable/ic_remove"
                         app:iconGravity="textStart"
                         app:iconTint="@color/black" />
