--- a/android/Sara/app/src/main/res/layout/fragment_image_upload.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_upload.xml
@@ -56,14 +56,14 @@
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/default_margin"
                         android:background="?attr/selectableItemBackgroundBorderless"
+                        android:onClick="@{()->fragment.setOnBackPressedListener()}"
                         app:srcCompat="@drawable/ic_close_" />
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
+                    android:layout_marginHorizontal="@dimen/default_margin"
                     android:backgroundTint="@color/sara_lightGray"
                     app:cardCornerRadius="@dimen/corner_radius_2"
                     app:cardElevation="0dp"
@@ -77,7 +77,8 @@
                         android:layout_gravity="center"
                         android:background="?attr/selectableItemBackground"
                         android:scaleType="center"
-                        tools:srcCompat="@drawable/ic_launcher_background" />
+                        android:onClick="@{()->fragment.changeImage()}"
+                        />
                 </androidx.cardview.widget.CardView>
 
                 <RadioGroup
@@ -102,7 +103,7 @@
                         android:includeFontPadding="true"
                         android:minWidth="0dp"
                         android:minHeight="0dp"
-                        android:onClick="@{()->fragment.activeRadioButton(1)}"
+                        android:onClick="@{()->fragment.activateInputType(1)}"
                         android:padding="@dimen/gap_margin"
                         android:text="@string/title_chip1"
                         android:textColor="@color/chip_text_color" />
@@ -119,7 +120,7 @@
                         android:gravity="center"
                         android:minWidth="0dp"
                         android:minHeight="0dp"
-                        android:onClick="@{()->fragment.activeRadioButton(2)}"
+                        android:onClick="@{()->fragment.activateInputType(2)}"
                         android:padding="@dimen/gap_margin"
                         android:text="@string/title_chip2"
                         android:textColor="@color/chip_text_color" />
@@ -135,7 +136,7 @@
                         android:gravity="center"
                         android:minWidth="0dp"
                         android:minHeight="0dp"
-                        android:onClick="@{()->fragment.activeRadioButton(3)}"
+                        android:onClick="@{()->fragment.activateInputType(3)}"
                         android:padding="@dimen/gap_margin"
                         android:text="@string/title_chip3"
                         android:textColor="@color/chip_text_color" />
@@ -155,7 +156,8 @@
                         android:gravity="center"
                         android:minWidth="0dp"
                         android:minHeight="0dp"
-                        android:onClick="@{()->fragment.activeRadioButton(4)}"
+                        android:onClick="@{()->fragment.activateInputType(4)}"
+                        android:onCheckedChanged="@{(v, checked)->fragment.handleFreeTypeCheckedChange(checked)}"
                         android:padding="@dimen/gap_margin"
                         android:text="@string/title_chip4"
                         android:textColor="@color/chip_text_color" />
@@ -208,10 +210,9 @@
                     QueryText="@{viewModel.queryType}"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/basic_button_height"
-                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginHorizontal="@dimen/default_margin"
                     android:layout_marginTop="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:layout_marginBottom="@dimen/default_margin" />
+                    android:layout_marginBottom="@dimen/default_margin"/>
 
 
             </LinearLayout>
