--- a/android/Sara/app/src/main/res/layout/fragment_gallery_details.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_gallery_details.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="gallery"
-            type="com.xten.sara.data.Gallery" />
+            type="com.xten.sara.data.model.Gallery" />
         <variable
             name="myEmail"
             type="java.lang.String" />
