--- a/android/Sara/app/src/main/res/layout/item_list_mini.xml
+++ b/android/Sara/app/src/main/res/layout/item_list_mini.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="gallery"
-            type="com.xten.sara.data.Gallery" />
+            type="com.xten.sara.data.model.Gallery" />
         <import type="android.view.View"/>
     </data>
 
@@ -17,8 +17,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="@dimen/item_card_height"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginHorizontal="4dp"
             android:layout_marginBottom="@dimen/gap_minus_margin"
             android:backgroundTint="@color/sara_lightGray"
             app:cardCornerRadius="@dimen/corner_radius_2"
@@ -67,8 +66,7 @@
                     android:id="@+id/content"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/gap_margin"
+                    android:layout_marginHorizontal="@dimen/gap_margin"
                     android:layout_marginBottom="@dimen/default_margin"
                     android:ellipsize="end"
                     android:singleLine="true"
