--- a/android/Sara/app/src/main/res/layout/item_list_wide.xml
+++ b/android/Sara/app/src/main/res/layout/item_list_wide.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="gallery"
-            type="com.xten.sara.data.Gallery" />
+            type="com.xten.sara.data.model.Gallery" />
         <import type="android.view.View"/>
     </data>
 
