--- a/android/Sara/app/src/main/res/layout/fragment_image_result.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_result.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.xten.sara.ui.home.ImageUploadViewModel" />
+            type="com.xten.sara.ui.home.ImageResultViewModel" />
         <variable
             name="fragment"
             type="com.xten.sara.ui.home.ImageResultFragment" />
