--- a/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
+++ b/android/Sara/app/src/main/res/navigation/nav_graph_main.xml
@@ -95,6 +95,18 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="uri"
+            app:argType="android.net.Uri"
+            app:nullable="true" />
+        <argument
+            android:name="type"
+            app:argType="integer"
+            android:defaultValue="1" />
+        <argument
+            android:name="str"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/galleryDetailsFragment"
